--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,8 +1,169 @@
-.imagem-exemplo {
-    display: block;
-    margin: 15px auto;
-    border: 1px solid #ccc;
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
-    width: 80%;
-    min-width: 400px;
-}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  h1{
+    font-family: Arial, sans-serif;
+    text-shadow: 1px 1px 5px #2077b9;
+  }
+  body {
+    background-color: #f0f0f0;
+    font-family: Arial, sans-serif;
+    -webkit-font-smoothing: antialiased !important;
+    padding: 20px;
+  }
+  
+  ul, li {
+    list-style: none;
+  }
+  
+  header {
+    width: 100%;
+    height: 50px;
+    background: #23a0ff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 1px 0 3px rgba(0, 0, 0, 0.4);
+  }
+  
+  .main {
+    max-width: 900px;
+    margin: 0 auto;
+  }
+div.newPost {
+    width: 100%;
+    height: auto; /* Ajuste para permitir a flexibilidade da altura */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 20px 0; /* Ajustado para menos espaço vertical */
+    padding: 25px;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.05);
+  }
+  
+  div.infoUser {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  
+  }
+  
+  div.imgUser {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background: #333;
+  
+  }
+  .close{
+    border: none;
+    background-color: transparent;
+    font-size: larger;
+    color: #f0f0f0;
+    width: 100px;
+  }
+  .close:hover{
+    color: #727272;
+  }
+  strong {
+    font-size: 16px;
+    color: #23a0ff;
+    margin-left: 10px;
+  }
+  strong {
+    font-size: 16px;
+    color: #23a0ff;
+    margin-left: 10px;
+  }
+  
+  form.formPost {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  
+  .escrev {
+    background: #fbfbfb;
+    width: 100%;
+    margin: 15px 0;
+    padding: 15px; /* Ajustado para menos padding */
+    border-radius: 10px;
+    border: 2px solid #fff;
+    resize: none;
+    outline: none;
+    font-weight: bold;
+    color: #727272;
+    font-family: Arial, sans-serif;
+  }
+  
+  #url-foto:focus {
+    border: 2px solid #23a0ff;
+  }
+  textarea:focus {
+    border: 2px solid #23a0ff;
+  }
+  
+  div.iconsAndButton {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+  }
+  button.btnSubmitForm:hover {
+    background: rgb(8, 138, 236);
+  }
+  button.btnSubmitForm {
+    background: #23a0ff;
+    padding: 10px 20px; /* Ajustado para um tamanho menor */
+    color: #fff;
+    font-weight: bold;
+    border-radius: 10px;
+    transition: background 0.2s;
+    border: 0;
+    cursor: pointer; /* Adicionado cursor pointer para melhor UX */
+  }
+  #imageUpload {
+    display: none;
+  }
+  
+  .btnFileForm {
+    width: 40px;
+    transition: background 0.2s;
+    text-align: center;
+    font-size: 28px;
+    height: 40px;
+    background-color: #23a0ff;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 0;
+  }
+  .btnFileForm:hover {
+   background-color: #2077b9;
+  }
+  .post-image {
+    margin: auto;
+    width: 100%;
+    max-width: 480px;
+    max-height: 400px;
+    object-fit: cover;
+    margin-top: 10px;
+  }
+  
+  /* Estilização adicional para o botão de reset */
+  button#resetButton {
+    background-color: #dc3545; /* Cor de fundo vermelho */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background 0.2s;
+  }
+  
+  button#resetButton:hover {
+    background-color: #c82333; /* Cor de fundo ao passar o mouse */
+  }
